# fred-macro-mcp

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: codeql.yml  test.yml
docs/: REGISTER.md  RELEASE.md  SECURITY.md  THREAT_MODEL.md
src/fred_macro_mcp/: __init__.py  __main__.py  _platform.py  cache.py  cache_backend.py  client.py  errors.py  models.py  server.py
src/fred_macro_mcp/tools/: __init__.py  _runtime.py  meta.py  releases.py  search.py  series.py
tests/: __init__.py  conftest.py  test_cache.py  test_cache_backend.py  test_client.py  test_errors.py  test_models.py  test_platform.py  test_security_owasp.py  test_server.py  test_stdio.py  test_tools.py
